<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.romek.userinputquiz.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quizwelcome"
                android:textSize="32sp"
                android:textColor="@android:color/black"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/antwoordenvraag1">

                    <RadioButton
                        android:id="@+id/question1awnser1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/awnserquestion1" />

                    <RadioButton
                        android:id="@+id/question1awnser2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/awnserquestion2" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question2"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/question2awnser1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/awnserquestion3" />

                    <RadioButton
                        android:id="@+id/question2awnser2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/awnserquestion4" />

                    <RadioButton
                        android:id="@+id/question2awnser3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/awnserquestion5" />
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aantalpunten"
                    android:textColor="@android:color/black"
                    android:id="@+id/aantalpunten"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
